fix: add spacing title line box3d

--- a/src/css/FruitSelection.css
+++ b/src/css/FruitSelection.css
@@ -1,4 +1,3 @@
-Fruit Selection Page - Theo Figma
 
 @font-face {
   font-family: "MyCustomFont";
@@ -53,8 +52,9 @@ Fruit Selection Page - Theo Figma
 
 .title-line {
   height: 0px;
-  width:30%; 
+  width:50%; 
   border: 2px solid #91CF43;
+  margin-top: 1rem;
 }
 
 
